--- a/specific-content/schedule/04-week01.qmd
+++ b/specific-content/schedule/04-week01.qmd
@@ -1,8 +1,7 @@
 {{< fa calendar >}} Sep 29 - Oct 5
 
-TBD
 
-<!--
+
 <table class="table-striped text-left table-bordered" align = "center">
 
   <thead>
@@ -18,9 +17,9 @@ TBD
     <td><input type="checkbox" /></td>
     <td> Introduction to STATS 67 and Data &nbsp; &nbsp; </td>
     <td>Welcome!!!</td>
-    <td><a href="https://mdogucu.github.io/stats67a-wi25-slides/week01/1a-intro-data.html" target ="_blank"> <i class="fas fa-laptop" aria-hidden="true"
+    <td><a href="https://mdogucu.github.io/stats67-fa25-slides/week01/1a-intro-data.html" target ="_blank"> <i class="fas fa-laptop" aria-hidden="true"
             title="External Link to Slides" target = "_blank"></i></a>
-      <a href="https://mdogucu.github.io/stats67a-wi25-starter-codes/1a-intro-data.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
+      <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/1a-intro-data.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
             title="External Link to Slides" target = "_blank"></i></a></td>
     <td></td>
   </tr>
@@ -37,30 +36,15 @@ TBD
   <tr>
     <td><input type="checkbox" /></td>
     <td> Summarizing Data &nbsp; &nbsp; </td>
-    <td>Descriptive Statistics and Data Visualizations (VIDEO RECORDED CLASS)</td>
-    <td><a href="https://uci.yuja.com/V/Video?v=12098192&node=52518713&a=72472280" target ="_blank"> <i class="fas fa-video" aria-hidden="true"
-            title="External Link to Slides" target = "_blank"></i></a> <a href="https://mdogucu.github.io/stats67a-wi25-slides/week01/1b-summarize-data.html" target ="_blank"> <i class="fas fa-laptop" aria-hidden="true"
-            title="External Link to Slides" target = "_blank"></i></a> <a href="https://mdogucu.github.io/stats67a-wi25-starter-codes/1b-summarize-data.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
+    <td>Descriptive Statistics and Data Visualizations</td>
+    <td><a href="https://mdogucu.github.io/stats67-fa25-slides/week01/1b-summarize-data.html" target ="_blank"> <i class="fas fa-laptop" aria-hidden="true"
+            title="External Link to Slides" target = "_blank"></i></a> <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/1b-summarize-data.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
             title="External Link to Slides" target = "_blank"></i></a></td>
     <td></td>
   </tr>
+
   <tr>
-    <td><input type="checkbox" /></td>
-    <td> Quiz 1b &nbsp; &nbsp; </td>
-    <td>Normally conducted in class but online due to online lecture</td>
-    <td><a href="https://www.gradescope.com/courses/935954/assignments/5515217" target ="_blank"> <i class="fas fa-edit" aria-hidden="true"
-            title="External Link to GitHub" target = "_blank"></i></a></td>
-    <td>Jan 14, 9:30 am</td>
-  </tr>
-  <tr>
-  <tr>
-    <td><input type="checkbox" /></td>
-    <td> Discussion: Summarizing Data &nbsp; &nbsp; </td>
-    <td> </td>
-    <td> <a href="https://mdogucu.github.io/stats67a-wi25-starter-codes/1d-summarize-data.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
-            title="External Link to Slides" target = "_blank"></i></a></td>
-    <td></td>
-  </tr>
+  
   
   
   
@@ -77,11 +61,11 @@ TBD
     <td><input type="checkbox" /></td>
     <td> Homework 1: First Steps with Data &nbsp; &nbsp; </td>
     <td></td>
-    <td><a href="https://www.gradescope.com/courses/935954/assignments/5511971" target ="_blank"> <i class="fas fa-edit" aria-hidden="true"
-            title="External Link to Gradescope" target = "_blank"></i></a> <a href="https://mdogucu.github.io/stats67a-wi25-starter-codes/1h-summarize-data.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
+    <td><a href="https://www.gradescope.com/courses/1142665/assignments/6838851" target ="_blank"> <i class="fas fa-edit" aria-hidden="true"
+            title="External Link to Gradescope" target = "_blank"></i></a> <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/1h-summarize-data.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
             title="External Link to Slides" target = "_blank"></i></a></td>
-    <td>Jan 14, 9:30 am</td>
+    <td>Oct 8, 11:00</td>
   </tr>
     
-  -->    
+  
 </table>
