fix final dates

--- a/specific-content/index/01d-important-dates.qmd
+++ b/specific-content/index/01d-important-dates.qmd
@@ -5,6 +5,6 @@
 
 **Final exam** 
 
-{{< var course.final-a >}} for Lecture A in the same classroom (ICS 174) 
+{{< var course.finala >}} for Lecture A in the same classroom (ICS 174) 
 
-{{< var course.final-b >}} for Lecture B in the same classroom (ICS 174)
+{{< var course.finalb >}} for Lecture B in the same classroom (ICS 174)
