--- a/sch-dis-a.qmd
+++ b/sch-dis-a.qmd
@@ -17,7 +17,8 @@ toc: true
     <td> Introduction to Data &nbsp; &nbsp; </td>
     <td></td>
     <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/1disa-intro-data.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
-            title="External Link to Slides" target = "_blank"></i></a></td>
+            title="External Link to Slides" target = "_blank"></i></a>
+        <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/1disa-intro-data-TA-notes.qmd" download title="TA notes"> TA notes</a></td>
   </tr>
   
 
