--- a/sch-dis-a.qmd
+++ b/sch-dis-a.qmd
@@ -21,6 +21,14 @@ toc: true
         <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/1disa-intro-data-TA-notes.qmd" download title="TA notes"> TA notes</a></td>
   </tr>
   
+  <tr>
+    <td><input type="checkbox" />Oct 7</td>
+    <td> Summarizing Data and Study Design &nbsp; &nbsp; </td>
+    <td></td>
+    <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/2disa-study-prob.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
+            title="External Link to Slides" target = "_blank"></i></a></td>
+  </tr>
+  
 
   
         
