--- a/sch-dis-b.qmd
+++ b/sch-dis-b.qmd
@@ -20,6 +20,14 @@ toc: true
             title="External Link to Slides" target = "_blank"></i></a></td>
   </tr>
   
+  <tr>
+    <td><input type="checkbox" />Oct 9</td>
+    <td> Study Design and Intro to Probability&nbsp; &nbsp; </td>
+    <td></td>
+    <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/2disb-study-prob.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
+            title="External Link to Slides" target = "_blank"></i></a></td>
+  </tr>
+  
 
   
         
