--- a/specific-content/schedule/04-week03.qmd
+++ b/specific-content/schedule/04-week03.qmd
@@ -1,3 +1,71 @@
 {{< fa calendar >}} Oct 13 - 19
 
-TBD
+<table class="table-striped text-left table-bordered" align = "center">
+
+  <thead>
+    <th style="width:  3%"></th>
+    <th style="width:  30%"></th>
+    <th style="width:  40%">Notes</th>
+    <th style="width:  8%">Links</th>
+    <th style="width:  15%">Due</th>
+  </thead>
+
+
+  <tr>
+    <td><input type="checkbox" /></td>
+    <td> Discrete Random Variables &nbsp; &nbsp; </td>
+    <td></td>
+    <td><a href="https://mdogucu.github.io/stats67-fa25-slides/week03/3a-discrete-rv.html" target ="_blank"> <i class="fas fa-laptop" aria-hidden="true"
+            title="External Link to Slides" target = "_blank"></i></td>
+    <td></td>
+  </tr>
+  
+  <tr>
+    <td><input type="checkbox" /></td>
+    <td> Reading </td>
+    <td>Section 3.4</td>
+    <td><a href="https://leanpub.com/os" target ="_blank"> <i class="fas fa-book" aria-hidden="true"
+            title="External Link to the Book" target = "_blank"></i></a></td>
+    <td></td>
+  </tr>
+  
+  <tr>
+    <td><input type="checkbox" /></td>
+    <td> Discrete Distributions &nbsp; &nbsp; </td>
+    <td></td>
+    <td><a href="https://mdogucu.github.io/stats67-fa25-slides/week03/3b-discrete-distributions.html" target ="_blank"> <i class="fas fa-laptop" aria-hidden="true"
+            title="External Link to Slides" target = "_blank"></i></a> </td>
+    <td></td>
+  </tr>
+  
+  <tr>
+    <td><input type="checkbox" /></td>
+    <td> Discussion: Discrete Random Variables and Distributions &nbsp; &nbsp; </td>
+    <td> </td>
+    <td> <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/3d-discrete-rv.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
+            title="External Link to Slides" target = "_blank"></i></a></td>
+    <td></td>
+  </tr>
+  
+  
+  
+  <tr>
+    <td><input type="checkbox" /></td>
+    <td> Reading </td>
+    <td>Sections 4.2, 4.3, and 4.5</td>
+    <td><a href="https://leanpub.com/os" target ="_blank"> <i class="fas fa-book" aria-hidden="true"
+            title="External Link to the Book" target = "_blank"></i></a></td>
+    <td></td>
+  </tr>
+  
+  <tr>
+    <td><input type="checkbox" /></td>
+    <td> Homework 3: Discrete Random Variables and Distributions &nbsp; &nbsp; </td>
+    <td></td>
+    <td><a href="https://www.gradescope.com/courses/1142665/assignments/6946222" target ="_blank"> <i class="fas fa-edit" aria-hidden="true"
+            title="External Link to Gradescope" target = "_blank"></i></a></td>
+    <td>Oct 22, 11:00 am</td>
+  </tr>
+    
+        
+</table>
