--- a/sch-dis-a.qmd
+++ b/sch-dis-a.qmd
@@ -30,6 +30,14 @@ toc: true
             <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/2disa-study-prob-TA-notes.qmd" download title="TA notes"> TA notes</a></td>
   </tr>
   
+  <tr>
+    <td><input type="checkbox" />Oct 14</td>
+    <td> Probability and Discrete Random Variables &nbsp; &nbsp; </td>
+    <td></td>
+    <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/3disa-prob-discrete-rv.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
+            title="External Link to Slides" target = "_blank"></i></a></td>
+  </tr>
+  
 
   
         
