--- a/sch-dis-b.qmd
+++ b/sch-dis-b.qmd
@@ -17,7 +17,8 @@ toc: true
     <td> Introduction to Data and Summarizing Data&nbsp; &nbsp; </td>
     <td></td>
     <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/1disb-summarize-data.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
-            title="External Link to Slides" target = "_blank"></i></a></td>
+            title="External Link to Slides" target = "_blank"></i></a>
+        <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/1disb-summarize-data-TA-notes.qmd" download title="TA notes"> TA notes</a></td>
   </tr>
   
   <tr>
@@ -25,6 +26,15 @@ toc: true
     <td> Study Design and Intro to Probability&nbsp; &nbsp; </td>
     <td></td>
     <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/2disb-study-prob.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
+            title="External Link to Slides" target = "_blank"></i></a>
+        <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/2disb-study-prob-TA-notes.qmd" download title="TA notes"> TA notes</a></td>
+  </tr>
+  
+  <tr>
+    <td><input type="checkbox" />Oct 9</td>
+    <td> Study Design and Intro to Probability&nbsp; &nbsp; </td>
+    <td></td>
+    <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/3disb-discrete-rv.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
             title="External Link to Slides" target = "_blank"></i></a></td>
   </tr>
   
