update dis a week 3 TA notes

--- a/sch-dis-a.qmd
+++ b/sch-dis-a.qmd
@@ -35,7 +35,8 @@ toc: true
     <td> Probability and Discrete Random Variables &nbsp; &nbsp; </td>
     <td></td>
     <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/3disa-prob-discrete-rv.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
-            title="External Link to Slides" target = "_blank"></i></a></td>
+            title="External Link to Slides" target = "_blank"></i></a>
+            <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/3disa-prob-discrete-rv-TA-notes.qmd" download title="TA notes"> TA notes</a></td>
   </tr>
   
 
