--- a/specific-content/schedule/04-week05.qmd
+++ b/specific-content/schedule/04-week05.qmd
@@ -1,4 +1,69 @@
 {{< fa calendar >}} Oct 27 - Nov 2
 
 
-TBD
+<table class="table-striped text-left table-bordered" align = "center">
+
+  <thead>
+    <th style="width:  3%"></th>
+    <th style="width:  30%"></th>
+    <th style="width:  40%">Notes</th>
+    <th style="width:  8%">Links</th>
+    <th style="width:  15%">Due</th>
+  </thead>
+
+  <tr>
+    <td><input type="checkbox" /></td>
+    <td> Review for Midterm&nbsp; &nbsp; </td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  
+  <tr>
+    <td><input type="checkbox" /></td>
+    <td> Midterm Objectives &nbsp; &nbsp; </td>
+    <td></td>
+    <td><a href="https://mdogucu.github.io/stats67-fa25-slides/week05/objectives.pdf" target ="_blank"> <i class="fas fa-book" aria-hidden="true"
+            title="External Link to Slides" target = "_blank"></i></td>
+    <td></td>
+  </tr>
+  
+  <tr>
+    <td><input type="checkbox" /></td>
+    <td> Midterm Cheatsheet &nbsp; &nbsp; </td>
+    <td></td>
+    <td><a href="https://mdogucu.github.io/stats67-fa25-slides/week05/cheatsheet.pdf" target ="_blank"> <i class="fas fa-book" aria-hidden="true"
+            title="External Link to Slides" target = "_blank"></i></td>
+    <td></td>
+  </tr>
+  
+  <tr>
+    <td><input type="checkbox" /></td>
+    <td> Midterm Policies &nbsp; &nbsp; </td>
+    <td></td>
+    <td><a href="https://mdogucu.github.io/stats67-fa25-slides/week05/cover.pdf" target ="_blank"> <i class="fas fa-book" aria-hidden="true"
+            title="External Link to Slides" target = "_blank"></i></td>
+    <td></td>
+  </tr>
+  
+  <tr>
+    <td><input type="checkbox" /></td>
+    <td> Sample Midterm &nbsp; &nbsp; </td>
+    <td></td>
+    <td><a href="https://canvas.eee.uci.edu/courses/76405/files?preview=32836669" target ="_blank"> <i class="fas fa-book" aria-hidden="true"
+            title="External Link to Slides" target = "_blank"></i></td>
+    <td></td>
+  </tr>
+  
+  
+  <tr>
+    <td><input type="checkbox" /></td>
+    <td> Midterm &nbsp; &nbsp; </td>
+    <td>In ICS 174 during regular Wednesday lecture</td>
+    <td></td>
+    <td></td>
+  </tr>
+  
+    
+        
+</table>
