--- a/sch-dis-a.qmd
+++ b/sch-dis-a.qmd
@@ -39,6 +39,13 @@ toc: true
             <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/3disa-prob-discrete-rv-TA-notes.qmd" download title="TA notes"> TA notes</a></td>
   </tr>
   
+  <tr>
+    <td><input type="checkbox" />Oct 21</td>
+    <td> Discrete Distributions and Continuous Random Variables &nbsp; &nbsp; </td>
+    <td></td>
+    <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/4disa-discrete-distr-continuous-rv.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
+            title="External Link to Slides" target = "_blank"></i></a>
+  </tr>
 
   
         
