--- a/sch-dis-b.qmd
+++ b/sch-dis-b.qmd
@@ -32,11 +32,20 @@ toc: true
   
   <tr>
     <td><input type="checkbox" />Oct 9</td>
-    <td> Study Design and Intro to Probability&nbsp; &nbsp; </td>
+    <td> Discrete Random Variables&nbsp; &nbsp; </td>
     <td></td>
     <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/3disb-discrete-rv.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
-            title="External Link to Slides" target = "_blank"></i></a></td>
+            title="External Link to Slides" target = "_blank"></i></a>
+        <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/3disb-discrete-rv-TA-notes.qmd" download title="TA notes"> TA notes</a></td>
   </tr>
+  
+  <tr>
+    <td><input type="checkbox" />Oct 9</td>
+    <td> Continuous Random Variables&nbsp; &nbsp; </td>
+    <td></td>
+    <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/4disb-continuous-rv.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
+            title="External Link to Slides" target = "_blank"></i></a></td>
+  </tr>  
   
 
   
