--- a/specific-content/schedule/04-week05.qmd
+++ b/specific-content/schedule/04-week05.qmd
@@ -55,6 +55,24 @@
     <td></td>
   </tr>
   
+   <tr>
+    <td><input type="checkbox" /></td>
+    <td> Sample Midterm Part 1&nbsp; &nbsp; </td>
+    <td> </td>
+    <td><a href="https://uci.yuja.com/V/Video?v=12348428&node=53939332&a=43852125" target ="_blank"> <i class="fas fa-video" aria-hidden="true"
+            title="External Link to Video" target = "_blank"></i> </td>
+    <td></td>
+  </tr>
+  
+  <tr>
+    <td><input type="checkbox" /></td>
+    <td> Sample Midterm Part 2&nbsp; &nbsp; </td>
+    <td> </td>
+    <td><a href="https://uci.yuja.com/V/Video?v=12348433&node=53939341&a=111059665" target ="_blank"> <i class="fas fa-video" aria-hidden="true"
+            title="External Link to Video" target = "_blank"></i> </td>
+    <td></td>
+  </tr>
+  
   
   <tr>
     <td><input type="checkbox" /></td>
@@ -63,6 +81,7 @@
     <td></td>
     <td></td>
   </tr>
+  
   
     
         
