--- a/sch-dis-a.qmd
+++ b/sch-dis-a.qmd
@@ -45,6 +45,15 @@ toc: true
     <td></td>
     <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/4disa-discrete-distr-continuous-rv.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
             title="External Link to Slides" target = "_blank"></i></a>
+            <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/4disa-discrete-distr-continuous-rv-TA-notes.qmd" download title="TA notes"> TA notes</a></td>
+  </tr>
+  
+  <tr>
+    <td><input type="checkbox" />Oct 28</td>
+    <td> Continuous Distributions and Midterm Review &nbsp; &nbsp; </td>
+    <td></td>
+    <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/5disa-continuous-distr.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
+            title="External Link to Slides" target = "_blank"></i></a></td>
   </tr>
 
   
