--- a/sch-dis-b.qmd
+++ b/sch-dis-b.qmd
@@ -44,7 +44,15 @@ toc: true
     <td> Continuous Random Variables&nbsp; &nbsp; </td>
     <td></td>
     <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/4disb-continuous-rv.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
-            title="External Link to Slides" target = "_blank"></i></a></td>
+            title="External Link to Slides" target = "_blank"></i></a>
+        <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/4disb-continuous-rv-TA-notes.qmd" download title="TA notes"> TA notes</a></td>
+  </tr>  
+  
+  <tr>
+    <td><input type="checkbox" />Oct 30</td>
+    <td> Midterm Solutions&nbsp; &nbsp; </td>
+    <td></td>
+    <td></td>
   </tr>  
   
 
