updated week 6 dis a material

--- a/sch-dis-a.qmd
+++ b/sch-dis-a.qmd
@@ -17,7 +17,7 @@ toc: true
     <td> Introduction to Data &nbsp; &nbsp; </td>
     <td></td>
     <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/1disa-intro-data.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
-            title="External Link to Slides" target = "_blank"></i></a>
+            title="Download Quarto File" target = "_blank"></i></a>
         <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/1disa-intro-data-TA-notes.qmd" download title="TA notes"> TA notes</a></td>
   </tr>
   
@@ -26,7 +26,7 @@ toc: true
     <td> Summarizing Data and Study Design &nbsp; &nbsp; </td>
     <td></td>
     <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/2disa-study-prob.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
-            title="External Link to Slides" target = "_blank"></i></a>
+            title="Download Quarto File" target = "_blank"></i></a>
             <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/2disa-study-prob-TA-notes.qmd" download title="TA notes"> TA notes</a></td>
   </tr>
   
@@ -35,7 +35,7 @@ toc: true
     <td> Probability and Discrete Random Variables &nbsp; &nbsp; </td>
     <td></td>
     <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/3disa-prob-discrete-rv.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
-            title="External Link to Slides" target = "_blank"></i></a>
+            title="Download Quarto File" target = "_blank"></i></a>
             <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/3disa-prob-discrete-rv-TA-notes.qmd" download title="TA notes"> TA notes</a></td>
   </tr>
   
@@ -44,7 +44,7 @@ toc: true
     <td> Discrete Distributions and Continuous Random Variables &nbsp; &nbsp; </td>
     <td></td>
     <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/4disa-discrete-distr-continuous-rv.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
-            title="External Link to Slides" target = "_blank"></i></a>
+            title="Download Quarto File" target = "_blank"></i></a>
             <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/4disa-discrete-distr-continuous-rv-TA-notes.qmd" download title="TA notes"> TA notes</a></td>
   </tr>
   
@@ -54,10 +54,16 @@ toc: true
     <td><a href="https://docs.google.com/presentation/d/1XhZwyuECilOtk5HQqyLgw2LasBefCBfPLjrIheMyEK0/edit?usp=sharing" target ="_blank"> <i class="fas fa-laptop" aria-hidden="true"
             title="External Link to Slides" target = "_blank"></i></td>
     <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/5disa-continuous-distr.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
-            title="External Link to Slides" target = "_blank"></i></a>
+            title="Download Quarto File" target = "_blank"></i></a>
             <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/5disa-continuous-distr-TA-notes.qmd" download title="TA notes"> TA notes</a></td>
   </tr>
 
-  
+  <tr>
+    <td><input type="checkbox" />Nov 4</td>
+    <td> Introduction to Statistical Inference and Midterm Solutions &nbsp; &nbsp; </td>
+    <td></td>
+    <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/6disa-stat-inf-intro.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
+            title="Download Quarto File" target = "_blank"></i></a></td>
+  </tr>
         
 </table>
