--- a/sch-dis-b.qmd
+++ b/sch-dis-b.qmd
@@ -55,6 +55,14 @@ toc: true
     <td></td>
   </tr>  
   
+  <tr>
+    <td><input type="checkbox" />Nov 6</td>
+    <td> Single Proportions&nbsp; &nbsp; </td>
+    <td></td>
+    <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/6disb-single-prop.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
+            title="External Link to Slides" target = "_blank"></i></a></td>
+  </tr>  
+  
 
   
         
