--- a/sch-dis-b.qmd
+++ b/sch-dis-b.qmd
@@ -52,7 +52,7 @@ toc: true
     <td><input type="checkbox" />Oct 30</td>
     <td> Midterm Solutions&nbsp; &nbsp; </td>
     <td></td>
-    <td></td>
+    <td><a href="https://canvas.eee.uci.edu/courses/76405/files?preview=33105761" target ="_blank" title="External Link to Canvas"> Midterm Solutions </a></td>
   </tr>  
   
   <tr>
