--- a/sch-dis-b.qmd
+++ b/sch-dis-b.qmd
@@ -60,7 +60,8 @@ toc: true
     <td> Single Proportions&nbsp; &nbsp; </td>
     <td></td>
     <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/6disb-single-prop.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
-            title="External Link to Slides" target = "_blank"></i></a></td>
+            title="External Link to Slides" target = "_blank"></i></a>
+        <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/4disb-continuous-rv-TA-notes.qmd" download title="TA notes"> TA notes</a></td>
   </tr>  
   
 
