--- a/sch-dis-a.qmd
+++ b/sch-dis-a.qmd
@@ -70,7 +70,7 @@ toc: true
   <tr>
     <td><input type="checkbox" />Nov 11</td>
     <td> Single Proportions and Difference Between 2 Proportions &nbsp; &nbsp; </td>
-    <td></td>
+    <td> Veteran's day </td>
     <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/7disa-single-diff-props.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
             title="Download Quarto File" target = "_blank"></i></a></td>
   </tr>
