--- a/specific-content/schedule/04-week07.qmd
+++ b/specific-content/schedule/04-week07.qmd
@@ -33,6 +33,7 @@
     <td> Inference for a Single Mean &nbsp; &nbsp; </td>
     <td></td>
     <td><a href="https://mdogucu.github.io/stats67-fa25-slides/week07/7b-single-mean.html" target ="_blank"> <i class="fas fa-laptop" aria-hidden="true"
+            title="External Link to Slides" target = "_blank"></i></a> <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/7b-example.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
             title="External Link to Slides" target = "_blank"></i></a> </td>
     <td></td>
   </tr>
@@ -52,7 +53,7 @@
     <td> Homework 7: Inference for Difference of Two Proportions and a Single Mean &nbsp; &nbsp; </td>
     <td>There are three different hw7 assignments. Pick the one you like and only complete one of them.</td>
     <td><a href="https://www.gradescope.com/courses/935954" target ="_blank"> <i class="fas fa-edit" aria-hidden="true"
-            title="External Link to Gradescope" target = "_blank"></i></a></td>
+            title="External Link to Gradescope" target = "_blank"></i></a> </td>
     <td>Nov 19, 11:00 am</td>
   </tr>
     
