--- a/specific-content/schedule/04-week07.qmd
+++ b/specific-content/schedule/04-week07.qmd
@@ -30,20 +30,10 @@
   
  <tr>
     <td><input type="checkbox" /></td>
-    <td> Inference for a Single Mean &nbsp; &nbsp; </td>
+    <td> Review of inference &nbsp; &nbsp; </td>
     <td></td>
-    <td><a href="https://mdogucu.github.io/stats67-fa25-slides/week07/7b-single-mean.html" target ="_blank"> <i class="fas fa-laptop" aria-hidden="true"
-            title="External Link to Slides" target = "_blank"></i></a> <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/7b-example.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
+    <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/7b-example.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
             title="External Link to Slides" target = "_blank"></i></a> </td>
-    <td></td>
-  </tr>
-  
-  <tr>
-    <td><input type="checkbox" /></td>
-    <td> Reading </td>
-    <td>Sections 7.1</td>
-    <td><a href="https://www.openintro.org/go/?id=os4_for_screen_readers&referrer=/book/os/index.php" target ="_blank"> <i class="fas fa-book" aria-hidden="true"
-            title="External Link to the Book" target = "_blank"></i></a></td>
     <td></td>
   </tr>
   
