--- a/specific-content/schedule/04-week10.qmd
+++ b/specific-content/schedule/04-week10.qmd
@@ -1,4 +1,37 @@
 {{< fa calendar >}} Dec 1 - Dec 7
 
 
-TBD
+
+<table class="table-striped text-left table-bordered" align = "center">
+
+  <thead>
+    <th style="width:  3%"></th>
+    <th style="width:  30%"></th>
+    <th style="width:  40%">Notes</th>
+    <th style="width:  8%">Links</th>
+    <th style="width:  15%">Due</th>
+  </thead>
+  
+  
+  <tr>
+    <td><input type="checkbox" /></td>
+    <td> Maximum Likelihood Estimation &nbsp; &nbsp; </td>
+    <td></td>
+    <td><a href="https://mdogucu.github.io/stats67-fa25-slides/week10/10a-maximum-likelihood.html" target ="_blank"> <i class="fas fa-laptop" aria-hidden="true"
+            title="External Link to Slides" target = "_blank"></i></td>
+    <td></td>
+  </tr>
+  
+  
+<tr>
+    <td><input type="checkbox" /></td>
+    <td> Final Review &nbsp; &nbsp; </td>
+    <td></td>
+  <td><a href="https://canvas.eee.uci.edu/courses/76405/files?preview=33327370" target ="_blank"> <i class="fas fa-book" aria-hidden="true"
+            title="External Link to Slides" target = "_blank"></i></a> <a href=""> <i class="fas fa-video" aria-hidden="true"
+            title="External Link to Video" target = "_blank"></i></a> </td>
+    <td></td>
+</tr>
+  
+        
+</table>
