upload week 10 dis a TA notes

--- a/sch-dis-a.qmd
+++ b/sch-dis-a.qmd
@@ -97,9 +97,10 @@ toc: true
   <tr>
     <td><input type="checkbox" />Dec 2</td>
     <td> Multiple Linear Regression and Maximum Likelihood Estimation &nbsp; &nbsp; </td>
-    <td></td>
+    <td><a href="https://drive.google.com/file/d/18WwA9NmE2uVovtBx312LPGBb6zU69LSF/view?usp=sharing" target ="_blank" title="External Link to Picture"> Discussion MLE Solution </a></td>
     <td><a href="https://mdogucu.github.io/stats67-fa25-starter-codes/10disa-multiple-linear-reg-maximum-likelihood.qmd" download> <i class="fa-brands fa-r-project" aria-hidden="true"
-            title="Download Quarto File" target = "_blank"></i></a></td>
+            title="Download Quarto File" target = "_blank"></i></a>
+            <a href="https://mdogucu.github.io/stats67-fa25-starter-codes/10disa-multiple-linear-reg-maximum-likelihood-TA-notes.qmd" download title="TA notes"> TA notes</a></td>
   </tr>
         
 </table>
